# vaultwarden-helm-restore-backup-restic

./: .gitignore  AGENTS.md  README.md  envrc.template  main.py  pyproject.toml
devops/: .gitignore  Dockerfile.restic
devops/deprecated/: Chart.yaml  README.md  TODOs.md  values.yaml
devops/deprecated/templates/: NOTES.txt  _helpers.tpl  backup-serviceaccount.yaml  cronjob.yaml  ingress.yaml  namespace.yaml  persistentvolumeclaim.yaml  rbac.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
devops/helm/: Chart.yaml  README.md  values.yaml
devops/helm/templates/: NOTES.txt  _helpers.tpl  backup-serviceaccount.yaml  cronjob.yaml  deployments.yaml  ingress.yaml  ingressclass.yaml  persistentvolumeclaim.yaml  rbac.yaml  secrets.yaml  serviceaccount.yaml  services.yaml  statefulset.yaml
devops/k8s/: deploy-vw-backup.yaml  sts_vaultwarden.yaml
docs/: TODOs.rst  conf.py  development.rst  index.rst  quick-start.rst
terraform/: README.md  iam.tf  outputs.tf  provider.tf  s3.tf  variables.tf
