[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultwarden-backup"
version = "0.1.0"
description = "Vaultwarden backup helper that scales down a StatefulSet and runs restic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "kubernetes>=30.1.0",
]

[tool.setuptools]
py-modules = ["main"]
