[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultwarden-helm-with-restic-backup"
version = "0.1.0"
description = "Helm Chart for Vaultwarden with restic backup, restore and vaultwarden-backup restore"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "kubernetes>=30.1.0",
]

[tool.setuptools]
py-modules = ["main"]
